video alignment issues

--- a/src/css/exercise.css
+++ b/src/css/exercise.css
@@ -111,8 +111,8 @@
     .ex-VideoCard{
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        padding: 10px 10px 20px 10px;
-        margin: 20px;
+        padding: 15px 0px 0px 0px;
+        margin: 10px;
     }
     .ex-VideoCard-Title{
         padding-bottom: 10px;
@@ -124,10 +124,16 @@
         font-weight: bolder;
     }
     .ex-VideoCard-Video iframe{
-        width: 200px;
-        height: 150px;
+        width: 280px;
+        height: 200px;
     }
   }
+
+  @media (min-width: 450px) and (max-width: 767px){
+    .ex-VideoCard{
+        padding: 15px 0px 15px 0px;
+    }
+}
   
   /* Tablet View */
   @media (min-width: 768px) and (max-width: 1199px){
